# blindbean

./: .aiexclude  .claudeignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE.md.bak  GEMINI.md  LICENSE  README.md  gemini_instructions.md  gemini_instructions.md.bak  pom.xml
.claude/skills/blindbean/: SKILL.md
.claude/skills/vibetags-usage/: SKILL.md
.gemini/ .gemini/skills/async-test-lib/: SKILL.md
.gemini/skills/vibetags-usage/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  demo.yml  release.yml  scorecards.yml
blindbean/: pom.xml
blindbean-annotations/: pom.xml
blindbean-annotations/src/main/java/: module-info.java
blindbean-bom/: pom.xml
blindbean-core/: .vibetags-roles  pom.xml
blindbean-core/.claude/rules/: core-domain.md
blindbean-core/src/main/java/: module-info.java
blindbean-example/: pom.xml
blindbean-example/src/main/java/com/example/: Wallet.java
blindbean-example/src/test/java/com/example/: KeyManagementTest.java  KeyRotationTest.java  NumericTypeTest.java  WalletTest.java
blindbean-fhe/: .vibetags-roles  pom.xml
blindbean-fhe/.claude/rules/: fhe-native-bridge.md
blindbean-fhe/src/main/java/: module-info.java
blindbean-fhe/src/main/native/: CMakeLists.txt  blindbean_fhe.cpp  vcpkg.json
blindbean-junit/: .vibetags-roles  pom.xml
blindbean-junit/.claude/rules/: test-support.md
blindbean-junit/src/main/java/: module-info.java
blindbean-processor/: .vibetags-roles  pom.xml
blindbean-processor/.claude/rules/: annotation-processor.md
blindbean-processor/src/main/java/: module-info.java
blindbean-runtime/: .vibetags-roles  pom.xml
blindbean-runtime/.claude/rules/: async-execution.md  context-and-keys.md  paillier-and-math.md
blindbean-runtime/src/main/java/: module-info.java
blindbean-tests/: pom.xml
config/checkstyle/: checkstyle.xml  suppressions.xml
config/pmd/: ruleset.xml
config/spotbugs/: exclude.xml
docs/: ARCHITECTURE.md  DX-REVIEW.md  SECURITY-AND-LIMITATIONS.md  blindbean-demo.cast
load-tests/: README.md  dependency-reduced-pom.xml  pom.xml
load-tests/charts/: charts.html
load-tests/results/0.1.0/: concurrency.txt  crypto-metrics.txt  jmh-paillier.txt
load-tests/results/0.2.0/: paillier-encrypt-optimization.md
module-path-tests/: pom.xml
src/jmh/java/com/blindbean/benchmark/: AdditionBenchmark.java
src/main/java/com/blindbean/annotations/: BlindEntity.java  Homomorphic.java  Scheme.java
src/main/java/com/blindbean/async/: BlindAsync.java  BlindAsyncException.java
src/main/java/com/blindbean/context/: BlindContext.java  BlindRotation.java  KeyBundle.java
src/main/java/com/blindbean/core/: Ciphertext.java  KeyTag.java  WrongKeyException.java
src/main/java/com/blindbean/fhe/: FheCiphertextNative.java  FheContext.java  FheException.java  FheNativeBridge.java
src/main/java/com/blindbean/junit/: BlindBeanExtension.java  BlindBeanTest.java
src/main/java/com/blindbean/math/: BlindMath.java  PaillierKeyPair.java  PaillierMath.java  PaillierVectorized.java
src/main/java/com/blindbean/processor/: HomomorphicProcessor.java
src/main/native/: CMakeLists.txt  blindbean_fhe.c  blindbean_fhe.cpp  blindbean_fhe.h  vcpkg.json
src/test/java/com/blindbean/async/: BlindAsyncConcurrencyTest.java  BlindAsyncTest.java
tools/: demo-commands.sh
(+110 files in other folders)
